Remove Salesforce toolkit from composer

--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,9 @@
             "email": "eli@launchdm.com"
         }
     ],
-    "require": {}
+    "require": {
+    },
+    "autoload": {
+        "psr-4": {"WPSyncSalesforce\\": "lib"}
+    }
 }
